2013-09-18  Yury Aliaev  <mutab0r@rambler.ru>
	* app/track-editor.c: Buffer overflow is fixed (utf-8 strings require
	more place);
	* app/gui.[ch], app/modue-info.c: Navigation with TAB and Up/Down arrows
	is implemented at Module info page;
	* app/sample-editor.c, app/st-subs.[ch]: The internal truncating of samples
	treated as 8 bit is removed, because it causes the significant precision
	loss. The samples are now actually rounded only at module/instrument
	saving.

2013-09-17  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c: The right behavior of Ctrl + A shortcut in entries is
	restored;
	* app/gui.c, app/instrument-editor.c, app/module-info.c, app/recode.[ch],
	app/sample-editor.c, app/st-subs.[ch], app/xm-player.c, app/xm.[ch]:
	Correct charachter set conversion between FT2 codeset and utf-8 is
	implemented as well as correct module/instruments'/samples' name padding.

2013-09-16  Yury Aliaev  <mutab0r@rambler.ru>
	* app/menubar.c: The right behavior of Ctrl + C/V/X shortcuts in entries
	is restored.

2013-04-04  Yury Aliaev  <mutab0r@rambler.ru>
	* app/file-operations.c, app/preferences.c: Code cleanups.

2013-04-02  Yury Aliaev  <mutab0r@rambler.ru>
	* app/main.c, app/midi-09x.c, app/midi.h, app/sample-display.c,
	app/sample-editor.c: Fixed wrong memory access and leaks detected 
	by Valgrind.

2013-03-30  Yury Aliaev  <mutab0r@rambler.ru>
	* app/drivers/alsa1x.c: Error recovery is implemented (inspired by aplay.c).

2013-03-26  Yury Aliaev  <mutab0r@rambler.ru>
	* app/drivers/oss.c: Combined OSS driver for both input and output is done,
	some bugs are fixed. OSS sampling now supports 8/16 bit, mono/stereo;
	* app/drivers/alsa1x.c, app/sample-editor.c: Bugs introduced by new code are
	fixed.

2013-03-23  Yury Aliaev  <mutab0r@rambler.ru>
	* app/driver-inout.h, app/mixer.h, app/module-info.[ch],
	app/sample-display.[ch], app/sample-editor.[ch], app/drivers/oss-import.c:
	Sampling at arbitrary resolution and mono/stereo mode is implemented.